# opensearch-tutorial

./: Dockerfile  Dockerfile.dockerignore  README.md  compose.yml  main.py  pyproject.toml  requirements.txt
