[tool.poetry]
name = "opensearch-tutorial"
version = "0.1.0"
description = ""
authors = ["houseleg <kosukefujita979@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
force_single_line = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
